--- a/archar-server/src/main/resources/application.yml
+++ b/archar-server/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 spring:
   datasource:
-    url: jdbc:mysql://192.168.56.101:3306/archar?characterEncoding=utf8
-    data-username: root
-    data-password: 123456
+    url: jdbc:mysql://192.168.56.101:3306/archar?useUnicode=true&characterEncoding=utf8&useSSL=false
+    username: root
+    password: 123456
+mybatis-plus:
+  type-enums-package: fgo.xiaox.archar.entity.enums
+  configuration:
+    default-enum-type-handler: org.apache.ibatis.type.EnumOrdinalTypeHandler
