--- a/archar-server/src/main/resources/application.yml
+++ b/archar-server/src/main/resources/application.yml
@@ -1,9 +1,20 @@
+
 spring:
   datasource:
     url: jdbc:mysql://192.168.56.101:3306/archar?useUnicode=true&characterEncoding=utf8&useSSL=false
     username: root
     password: 123456
-mybatis-plus:
-  type-enums-package: fgo.xiaox.archar.entity.enums
-  configuration:
-    default-enum-type-handler: org.apache.ibatis.type.EnumOrdinalTypeHandler
+  application:
+    name: archar
+  mvc:
+    throw-exception-if-no-handler-found: true
+  resources:
+    add-mappings: false
+#mybatis-plus使用枚举类型配置
+#mybatis-plus:
+#  type-enums-package: fgo.xiaox.archar.entity.enums
+#  configuration:
+#    default-enum-type-handler: org.apache.ibatis.type.EnumOrdinalTypeHandler
+logging:
+  level:
+    fgo.xiaox.archar.mapper: debug
