--- a/archar-server/pom.xml
+++ b/archar-server/pom.xml
@@ -85,6 +85,14 @@
             <version>2.3.30</version>
         </dependency>
 
+        <!--    工具类    -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>30.0-jre</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
