--- a/archar-server/src/main/resources/application.yml
+++ b/archar-server/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 spring:
   datasource:
     url: jdbc:mysql://192.168.56.101:3306/archar?useUnicode=true&characterEncoding=utf8&useSSL=false
@@ -18,3 +17,5 @@ spring:
 logging:
   level:
     fgo.xiaox.archar.mapper: debug
+server:
+  port: 8100
